# webgpu-sandbox

./: Cargo.toml  README.md  index.07dc61b3b74442307baa.js  index.15c6d305d7ef7bb753b4.js  index.2786081b63635809a6b1.js  index.2e2c3e171df5b7b6fb8a.js  index.3bc8257ac9184ac922d0.js  index.4744579ef788af6bc308.js  index.5098d4733d21a7a833d6.js  index.50c38e95dbd261421fc1.js  index.53a696aa2c876ecb8382.js  index.57fbe3f53d8d2e006fde.js  index.5cf997ecd5271f6ca010.js  index.5fc55a62b2f0f0475bdf.js  index.648744ab408897158b04.js  index.6513dfede8851ebc62e2.js  index.668c3a72072e3866bf4a.js  index.6e7ecd023d862aa5c1c1.js  index.77748666f3baa2e77fd3.js  index.89fdca2b28a766d64a5f.js  index.9d34720fadb7ff334768.js  index.9fabf36c54cdb15e69d8.js  index.ac8008718055cda730c0.js  index.b783ee168193d753ae57.js  index.bcc4e1352bfba96a49f5.js  index.c5ee64558b8269f39114.js  index.c87f6dc33acb4a0015d3.js  index.e9c73150c750771c5c6f.js  index.f10ce09947a7b368187d.js  index.f8995424473a5f6c3e0b.js  index.html  package-lock.json
webgpu-sandbox-web/: .gitignore  Cargo.toml  LICENSE  index.html  index.js  package-lock.json  package.json  webpack.config.js
webgpu-sandbox-web/.cargo/: config.toml
webgpu-sandbox-web/src/: animation.rs  asset.rs  console.rs  fetch.rs  global.rs  gpu.rs  lib.rs  preset.rs  renderer.rs  scene.rs  web.rs
webgpu-sandbox-web/src/render/: device.rs  layout.rs  mod.rs  shader.rs  surface.rs  vertex_buffer.rs
webgpu-sandbox-web/src/render/layouts/: common.rs  mod.rs  skybox.rs
webgpu-sandbox-web/src/render/shaders/: common.rs  cube.rs  mod.rs  skybox.rs
(+3 files in other folders)
